# kira-autolys

./: .gitignore  Cargo.toml  METRICS.md  README.md
.cargo/: config.toml
docs/: PIPELINE.md
src/: lib.rs  main.rs  stage_error.rs
src/cli/: cohort_summary.rs  mod.rs
src/config/: mod.rs  thresholds.rs
src/expr/: mod.rs  normalized.rs
src/genesets/: v1.rs
src/io/: cache_bin.rs  dense_tsv.rs  h5ad.rs  mod.rs  mtx.rs
src/math/: mod.rs  simd.rs  stats.rs
src/metrics/: mod.rs
src/metrics/autolys_extension/: aggregate.rs  mod.rs  panels.rs  scores.rs
src/model/: cli.rs  cohort_view.rs  ctx.rs  mod.rs  schema_v2.rs
src/pipeline/: cohort_metrics.rs  cohort_signatures.rs  cohort_summary.rs  cohort_therapy.rs  cohort_vulnerability.rs  mod.rs  stage0_input.rs  stage10_cross_organelle.rs  stage11_therapy_delta.rs  stage12_classification.rs  stage13_vulnerability.rs  stage14_export_v2.rs  stage16_positioning.rs  stage17_ferroptosis.rs  stage18_cholesterol.rs  stage19_er_lysosome.rs  stage1_normalization.rs  stage20_secretory_lysosome.rs  stage21_antigen_processing.rs  stage22_lipid_buffering.rs  stage23_lysosomal_ros.rs  stage24_calcium_coupling.rs  stage25_biogenesis.rs  stage26_membrane_repair.rs  stage2_autophagy.rs  stage3_lysosome.rs  stage4_regulatory.rs  stage5_survival.rs  stage6_export.rs  stage7_lysosomal_damage.rs  stage8_autophagy_selectivity.rs  stage9_coupling.rs
src/report/: mod.rs
src/report/cohort/: classes.rs  metrics.rs  mod.rs  signatures.rs  therapy.rs  vulnerabilities.rs
tests/src_inline/: main_inline.rs
tests/src_inline/io/: mtx.rs  (+2 more)
(+39 files in other folders)
